nested css selector is wrapped with :is() to prevent the rule from being parsed as a declaration

--- a/src/App.css
+++ b/src/App.css
@@ -56,12 +56,12 @@
       top: 44%;
       transform: translate(-50%, -50%);
 
-      img {
+      :is(img) {
         width: 3em;
         height: 3em;
       }
 
-      span {
+      :is(span) {
         line-height: 120%;
         font-size: 24px;
       }
@@ -136,7 +136,7 @@
     box-shadow: var(--document-box-shadow);
 
     .react-pdf__Page {
-      canvas {
+      :is(canvas) {
         max-width: 100%;
         height: auto !important;
       }
@@ -181,7 +181,7 @@
     justify-content: center;
     align-items: center;
 
-    button {
+    :is(button) {
       background: transparent;
       opacity: 0;
       transition: opacity 200ms;
@@ -190,7 +190,7 @@
       height: 2em;
       width: 2em;
 
-      img {
+      :is(img) {
         width: 100%;
         height: 100%;
       }
@@ -201,7 +201,7 @@
     }
   }
   &:hover {
-    button {
+    :is(button) {
       opacity: 0.6;
     }
   }
@@ -272,12 +272,12 @@
       > div {
         top: 42%;
 
-        img {
+        :is(img) {
           height: 2em;
           width: 2em;
         }
 
-        span {
+        :is(span) {
           font-size: 16px;
         }
       }
@@ -323,7 +323,7 @@
       > div {
         top: 50%;
 
-        span {
+        :is(span) {
           font-size: 28px;
         }
       }
@@ -357,7 +357,8 @@
 
       > div {
         top: 50%;
-        span {
+
+        :is(span) {
           font-size: 20px;
         }
       }
@@ -373,12 +374,12 @@
       > div {
         top: 50%;
 
-        img {
+        :is(img) {
           height: 2em;
           width: 2em;
         }
 
-        span {
+        :is(span) {
           font-size: 16px;
         }
       }
